# dream-research

./: .cursorignore  README.md  install.sh  llm_cache.json  pyproject.toml  requirements.txt  setup.py  setup_project.sh
configs/: default_experiment.json  default_personality.json
data/: mock_states.json
data/generations/: 20241104_082636.json  20241104_084627.json  20241104_084758.json  20241104_085018.json  20241104_085317.json  20241104_095848.json  phase_exp_1730761794.json  phase_exp_1730761863.json  phase_exp_1730764467.json
data/metadata/: 20241104_082636.json  20241104_084627.json  20241104_084758.json  20241104_085018.json  20241104_085317.json
documents/: A Survey of Personalities in Embedded Space.md  Code as a Genetic Regulatory network.md  Evolutionary potential and Robustness of prompts.md  Memory.md  Monte Carlo phase separation analysis.md  Mutation Types For Prompts.md  Notation for LM Formalization.md  Personalities dreams.md  Personality matrix.md  Phase separation of personalities.md  Thermodynamics of LLM conformational space.md
flows/: personality_generator.py
flows/core/: batch_processor.py  data_storage.py  energy_calculator.py  information_detection.py  llm_client.py  monte_carlo.py  personality_dreams.py  personality_embeddings.py  personality_evolution.py  personality_genetics.py  personality_matrix.py  personality_sampling.py  thermodynamics.py  types.py
flows/experiments/: analyze_results.py  dream_evolution_experiment.py  personality_phase_separation.py  run_experiment.py  test_basic.py  (+2 more)
tests/: gene_identification_tests.py
(+1220 files in other folders)
